[gd_scene load_steps=2 format=3 uid="uid://ciitgmfp3gs82"]

[ext_resource type="Script" path="res://sources/game/debugs/scp_debug_player.gd" id="1_7uvey"]

[node name="DebugEntity" type="Node2D"]
script = ExtResource("1_7uvey")

[node name="Position" type="Label" parent="."]
visible = false
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -31.0
offset_top = 4.0
offset_right = 31.0
offset_bottom = 16.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 6
horizontal_alignment = 1
vertical_alignment = 1

[node name="PositionTimer" type="Timer" parent="Position"]

[node name="ID" type="Label" parent="."]
visible = false
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -31.0
offset_top = 11.0
offset_right = 31.0
offset_bottom = 23.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 6
horizontal_alignment = 1
vertical_alignment = 1

[node name="IDTimer" type="Timer" parent="ID"]
wait_time = 2.0
one_shot = true

[connection signal="timeout" from="Position/PositionTimer" to="." method="_on_position_timer_timeout"]
[connection signal="timeout" from="ID/IDTimer" to="." method="_on_id_timer_timeout"]
